# ktimeclock

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  FEATURES  Makefile.am  Makefile.in  README.md  TODO  config.h.in  configure  configure.in  configure.in.in  ktimeclock.lsm  subdirs
admin/CVS/: Entries  Repository  Root
doc/: CMakeLists.txt  Makefile.in
doc/en/: CMakeLists.txt  Makefile.am  Makefile.in
doc/en/ktimeclock/: CMakeLists.txt  Makefile.in  index.cache.bz2  index.docbook
ktimeclock/: CMakeLists.txt  Makefile.am  Makefile.in  hisc-app-ktimeclock.svgz  ktaddedit.cpp  ktaddedit.h  ktdocker.cpp  ktdocker.h  ktimeclock  ktimeclock.cpp  ktimeclock.desktop  ktimeclock.h  ktimeclockui.rc  ktlistitem.cpp  ktlistitem.h  kttime.cpp  kttime.h  main.cpp  mainwindow.cpp  mainwindow.h  preferences.cpp  preferences.h  resource.h  version.h  version.h.in
ktimeclock/pics/: CMakeLists.txt  Makefile.am  Makefile.in  dockicon-orig.svgz  dockicon0.xpm  dockicon1.xpm  dockicon2.xpm  dockicon3.xpm  dockicon4.xpm  dockicon5.xpm  dockicon6.xpm  dockicon7.xpm
po/: Makefile.in
specs/: Makefile.am  Makefile.in  ktimeclock.spec
