###############################################################################
# Specify the data files we've got here that need to get installed.
###############################################################################
pics_DATA = dockicon0.xpm \
    dockicon1.xpm \
    dockicon2.xpm \
    dockicon3.xpm \
    dockicon4.xpm \
    dockicon5.xpm \
    dockicon6.xpm \
    dockicon7.xpm

picsdir = $(kde_datadir)/ktimeclock/pics
